--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="global.css">
+    <link rel="manifest" href="manifest.json">
     <style>
         body {
             background-color: #f8f9fa;
@@ -444,6 +445,103 @@
                 </a>
             </div>
 
+            <!-- NEW TOOLS -->
+            <!-- Data Tools (New) -->
+            <div class="col tool-item" data-category="data">
+                <a href="base64-tool.html" class="card h-100 text-decoration-none tool-card">
+                    <span class="category-badge badge-data">Data</span>
+                    <div class="card-body text-center p-4">
+                        <i class="bi bi-file-binary display-4"></i>
+                        <h5 class="card-title mt-3">Base64 Encoder/Decoder</h5>
+                        <p class="card-text small text-muted">Encode and decode Base64 strings.</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col tool-item" data-category="data">
+                <a href="regex-tester.html" class="card h-100 text-decoration-none tool-card">
+                    <span class="category-badge badge-data">Data</span>
+                    <div class="card-body text-center p-4">
+                        <i class="bi bi-regex display-4"></i>
+                        <h5 class="card-title mt-3">Regex Tester</h5>
+                        <p class="card-text small text-muted">Live regex matching with groups.</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col tool-item" data-category="data">
+                <a href="diff-viewer.html" class="card h-100 text-decoration-none tool-card">
+                    <span class="category-badge badge-data">Data</span>
+                    <div class="card-body text-center p-4">
+                        <i class="bi bi-file-diff display-4"></i>
+                        <h5 class="card-title mt-3">Diff Viewer</h5>
+                        <p class="card-text small text-muted">Compare text side-by-side.</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col tool-item" data-category="data">
+                <a href="markdown-previewer.html" class="card h-100 text-decoration-none tool-card">
+                    <span class="category-badge badge-data">Data</span>
+                    <div class="card-body text-center p-4">
+                        <i class="bi bi-markdown display-4"></i>
+                        <h5 class="card-title mt-3">Markdown Previewer</h5>
+                        <p class="card-text small text-muted">Live markdown editor with preview.</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col tool-item" data-category="data">
+                <a href="csv-viewer.html" class="card h-100 text-decoration-none tool-card">
+                    <span class="category-badge badge-data">Data</span>
+                    <div class="card-body text-center p-4">
+                        <i class="bi bi-file-earmark-spreadsheet display-4"></i>
+                        <h5 class="card-title mt-3">CSV Viewer/Editor</h5>
+                        <p class="card-text small text-muted">View, edit, and export CSV files.</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col tool-item" data-category="data">
+                <a href="timestamp-converter.html" class="card h-100 text-decoration-none tool-card">
+                    <span class="category-badge badge-data">Data</span>
+                    <div class="card-body text-center p-4">
+                        <i class="bi bi-clock-history display-4"></i>
+                        <h5 class="card-title mt-3">Timestamp Converter</h5>
+                        <p class="card-text small text-muted">Convert Unix timestamps to dates.</p>
+                    </div>
+                </a>
+            </div>
+
+            <!-- Security Tools (New) -->
+            <div class="col tool-item" data-category="security">
+                <a href="hash-generator.html" class="card h-100 text-decoration-none tool-card">
+                    <span class="category-badge badge-security">Security</span>
+                    <div class="card-body text-center p-4">
+                        <i class="bi bi-hash display-4"></i>
+                        <h5 class="card-title mt-3">Hash Generator</h5>
+                        <p class="card-text small text-muted">Generate MD5, SHA-256, SHA-512 hashes.</p>
+                    </div>
+                </a>
+            </div>
+
+            <!-- Utility Tools (New) -->
+            <div class="col tool-item" data-category="other">
+                <a href="qr-code-generator.html" class="card h-100 text-decoration-none tool-card">
+                    <span class="category-badge badge-other">Utility</span>
+                    <div class="card-body text-center p-4">
+                        <i class="bi bi-qr-code display-4"></i>
+                        <h5 class="card-title mt-3">QR Code Generator</h5>
+                        <p class="card-text small text-muted">Generate QR codes from text or URLs.</p>
+                    </div>
+                </a>
+            </div>
+            <div class="col tool-item" data-category="other">
+                <a href="barcode-generator.html" class="card h-100 text-decoration-none tool-card">
+                    <span class="category-badge badge-other">Utility</span>
+                    <div class="card-body text-center p-4">
+                        <i class="bi bi-upc-scan display-4"></i>
+                        <h5 class="card-title mt-3">Barcode Generator</h5>
+                        <p class="card-text small text-muted">Generate Code128, EAN-13, UPC barcodes.</p>
+                    </div>
+                </a>
+            </div>
+
         </div>
     </div>
 
@@ -489,6 +587,11 @@
                         item.classList.add('hidden');
                     }
                 });
+            }
+
+            // Register service worker for PWA
+            if ('serviceWorker' in navigator) {
+                navigator.serviceWorker.register('sw.js').catch(err => console.log('SW registration failed:', err));
             }
         });
     </script>
