--- a/index.html
+++ b/index.html
@@ -444,6 +444,16 @@
                     </div>
                 </a>
             </div>
+            <div class="col tool-item" data-category="other">
+                <a href="games/driving-simulator.html" class="card h-100 text-decoration-none tool-card">
+                    <span class="category-badge badge-games">Games</span>
+                    <div class="card-body text-center p-4">
+                        <i class="bi bi-speedometer2 display-4"></i>
+                        <h5 class="card-title mt-3">Road Rush</h5>
+                        <p class="card-text small text-muted">Arcade driving simulator game.</p>
+                    </div>
+                </a>
+            </div>
 
             <!-- NEW TOOLS -->
             <!-- Data Tools (New) -->
